fix wallet spacing

--- a/css/wave-catchers.css
+++ b/css/wave-catchers.css
@@ -72,7 +72,7 @@ p {
 	background-color: white;
 	color:black;
 	width: 95%;
-	height: 70%;
+	height: 80%;
   }
 
 
